--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "laravel-echo": "^1.5.4",
+        "pusher-js": "^4.4.0",
         "vue-router": "^3.0.6",
         "vue-simplemde": "^0.5.2",
         "vuetify": "^1.0.4"
